fix(consonant-blocks): fix accidental horizontal scroll

--- a/templates/consonant/blocks/marquee/marquee.css
+++ b/templates/consonant/blocks/marquee/marquee.css
@@ -14,6 +14,11 @@ main .section-wrapper:first-of-type.marquee-container > div > :first-child:not(.
     margin-top: calc(var(--header-height) + 64px);
 }
 
+main .section-wrapper.marquee-container > div {
+    max-width: none;
+    padding: 0;
+}
+
 main .marquee h2 {
     font-size: var(--heading-font-size-xl);
 }
@@ -70,19 +75,15 @@ main .section-wrapper:first-of-type.marquee-container .marquee:first-child {
 
 .marquee .background {
     position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 100vw;
-    right: 0;
+    width: 100%;
+    height: 100%;
+    left: 0;
     top: 0;
-    bottom: 0;
     user-select: none;
 }
 
 .marquee .container {
     position: relative;
-    max-width: var(--grid-mobile-container-width);
-    margin: 0 auto;
 }
 
 .marquee .container .marquee-column {
