--- a/templates/consonant/styles/styles.css
+++ b/templates/consonant/styles/styles.css
@@ -201,7 +201,8 @@ main .section-wrapper > div {
 }
 
 @media (min-width: 700px) {
-  main .section-wrapper > div {
+  main .section-wrapper > div,
+  main .container {
     max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
